# deb-cpack-template

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build-debian.yml
